# emb_perf_banchmarks

./: CMakeLists.txt
data/: large_primes.txt  small_primes.txt
julia/: primes.jl
lua/: primes.lua
python/: primes.py
src/: main_cpp.cpp  main_jl.cpp  main_lua.cpp  main_py.cpp
